<resources>
    <string name="app_name">PracticaTibu</string>
    <string name="explication_entry_name">Por favor ingrese su nombre, su nombre va a ser mostrado en la pantalla siguiente</string>
    <string name="button_next">Siguiente</string>
    <string name="entry_name">Ingrese nombre</string>
    <string name="toast_name_validation">"Debe ingresar un nombre"</string>
    <string name="title_term_and_conditions">Terminos y Condiciones</string>
    <string name="term_and_conditions" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that a re bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</string>
    <string name="button_implicit">Implicit intent</string>
    <string name="url">Url</string>
    <string name="location">Location</string>
    <string name="text">Text</string>
    <string name="button_url">Open Website</string>
    <string name="button_location">Open location</string>
    <string name="button_text">share this text</string>
    <string name="http">http://</string>
    <string name="description_imag">El mejor jugador de la historia</string>
    <string name="button_complete_form">Completar Formulario</string>
    <string name="create">onCreate()</string>
    <string name="start">onStart()</string>
    <string name="pause">onPause()</string>
    <string name="restart">onRestart()</string>
    <string name="resume">onResume()</string>
    <string name="stop">onStop()</string>
    <string name="destroy">onDestroy()</string>
    <string name="form">Formulario</string>
    <string name="entry_sport">Ingrese Deporte</string>
    <string name="date">Fecha</string>
    <string name="sexuality">Sexualidad</string>
    <string name="switch_man_or_woman">¿Es hombre?</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="alert_title_no_field">Campo Incompleto</string>
    <string name="alert_no_name">Debe ingresar un nombre</string>
    <string name="alert_no_sport">Debe ingresar un deporte</string>
    <string name="alert_no_name_sport">Debe ingresar un nombre y un deporte</string>
    <string name="acept">Aceptar</string>
    <string name="name">Nombre</string>
    <string name="sport">Deporte</string>
    <string name="validation_age">El usuario debe ser mayor de edad</string>
    <string name="button_list_view">Ver lista</string>
    <string name="name1_list">Juan</string>
    <string name="name2_list">Pedro</string>
    <string name="name3_list">Pablo</string>
    <string name="name4_list">Lorenzo</string>
    <string name="name5_list">Julian</string>
</resources>